fix: apply required spacing and styles to homepage banners

--- a/Childrens-Social-Care-CPD/styles/scss/overrides/_dfe-overrides.scss
+++ b/Childrens-Social-Care-CPD/styles/scss/overrides/_dfe-overrides.scss
@@ -50,7 +50,7 @@
 
 /* HOMEPAGE HERO BANNER ----------------------- */
 .app-section-beta {
-    padding: 30px 0;
+    padding: 40px 0 20px 0;
 }
 
 .app-section-beta__blue {
@@ -61,6 +61,10 @@
     color: white;
 }
 
+h1.body-header-font {
+    margin-bottom: 0;
+}
+
 /* DFE HEADER - CODE FROM DFE DESIGN GUIDE AND WITH EDITS --------------------------------------------------------- */
 .govuk-header {
     background-color: #003a69;
@@ -68,7 +72,7 @@
 
 h1,
 .dfe-heading-xl, .govuk-heading-xl {
-  margin-bottom: 10px !important
+  margin-bottom: 10px
 }
 
 .govuk-header__container {
@@ -876,4 +880,8 @@ content: "";
 .beta-banner .govuk-tag {
     color: #fff;
     background-color: #1D70B8;
+}
+
+.beta-banner-home {
+    border-bottom: 0;
 }
